Increase top bar height to 40px
Increase top bar height to 40px to match the designs.
A visual side effect is that the dropdown menus now
overlap the top bar and clearly appear on top of it
rather than just below.

--- a/h/static/styles/annotator/inject.scss
+++ b/h/static/styles/annotator/inject.scss
@@ -202,6 +202,10 @@ $base-font-size: 14px;
     padding-right: 6px;
     width: 36px;
     margin-bottom: 10px;
+
+    // the height of the sidebar toggle is set
+    // to match the height of the top bar
+    height: 40px;
   }
 }
 
