--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -24,7 +24,7 @@ body {
   font-family: $sans-font-family;
   font-weight: 300;
   padding: $sidebar-h-padding;
-  padding-top: calc(#{$sidebar-h-padding} + 30px);
+  padding-top: $sidebar-h-padding + $top-bar-height;
   -webkit-overflow-scrolling: touch;
 
   @include respond-to(tablets desktops) {
