Improve the alignment and spacing of the group list dropdown
 * Adjust the styling of the icon so that the bottom of
   the 'chat heads' icon for groups is aligned vertically
   with the baseline of the group name label

 * Remove extra space between group name label and dropdown
   indicator arrow

T-90

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -158,6 +158,25 @@ $group-list-width: 270px;
   }
 }
 
+// the icon indicating the type of group currently selected at
+// the top of the groups list
+.group-list-label__icon {
+  color: $color-gray;
+  display: inline-block;
+  margin-right: 4px;
+  vertical-align: baseline;
+
+  // align the base of the chat-heads icon for groups
+  // with the baseline of the group name label
+  transform: translateY(1px);
+}
+
+// the label showing the currently selected group which opens
+// the drop-down list when clicked
+.group-list-label__label {
+  font-weight:bold;
+}
+
 // the name of a group in the groups drop-down list
 // and 'Post to <Group>' button for saving annotations
 .group-name-link {
