Search toolbar action UX tweaks
Following UX discussion:

 * Expand the search bar only on click rather than hover

 * Add missing title to search bar component

--- a/h/templates/client/top_bar.html
+++ b/h/templates/client/top_bar.html
@@ -48,7 +48,8 @@
     <simple-search class="simple-search"
          query="searchController.query"
          on-search="searchController.update(query)"
-         on-clear="searchController.clear()"></simple-search>
+         on-clear="searchController.clear()"
+         title="Filter the annotation list"></simple-search>
     <a class="top-bar__btn"
             ng-click="shareDialog.visible = !shareDialog.visible"
             ng-if="isSidebar"
