Reorder and rename items in account menu
Implement the design changes from https://trello.com/c/DZEDxU4C/90-top-bar-ui-updates

 - Move the 'My Annotations' item up and change the label
   to the account username
 - Swap Feedback and Help
 - Make the 'Sign out' link more subtle

 * BEM-ify the dropdown menu link CSS for consistency
   and to avoid specificity conflicts

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -181,6 +181,7 @@ $group-list-width: 270px;
 // and 'Post to <Group>' button for saving annotations
 .group-name-link {
   white-space: nowrap;
+  color: inherit;
 }
 
 /* The user account dropdown menu */
