--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -60,7 +60,7 @@
       <div class="group-item" ng-click="createNewGroup()">
         <div class="group-icon-container"><i class="h-icon-add"></i></div>
         <div class="group-details">
-          <a href="" title="Create a new group to share annotations">
+          <a href="" class="group-name-link" title="Create a new group to share annotations">
             New group
           </a>
         </div>
