--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -22,7 +22,7 @@
         <li ng-click="sort.name = option"
             ng-hide="option == 'Location' && !isSidebar"
             ng-repeat="option in ['Newest', 'Oldest', 'Location']"
-            ><a href="">{{option}}</a></li>
+            ><a class="dropdown-menu__link" href="">{{option}}</a></li>
       </ul>
     </span>
   </li>
