--- a/h/templates/client/top_bar.html
+++ b/h/templates/client/top_bar.html
@@ -28,12 +28,12 @@
           {{account.username}}<span class="provider" ng-show="authUser">/{{account.provider}}</span><i class="h-icon-arrow-drop-down"></i>
         </span>
         <ul class="dropdown-menu pull-right" role="menu">
-          <li ng-show="authUser"><a href="" ng-click="accountDialog.visible = true">Account</a></li>
-          <li><a href="mailto:support@hypothes.is">Feedback</a></li>
-          <li><a href="/docs/help" target="_blank">Help</a></li>
-          <li ng-show="authUser"><a href="/stream?q=user:{{account.username}}"
+          <li ng-show="authUser"><a class="dropdown-menu__link" href="" ng-click="accountDialog.visible = true">Account</a></li>
+          <li><a class="dropdown-menu__link" href="mailto:support@hypothes.is">Feedback</a></li>
+          <li><a class="dropdown-menu__link" href="/docs/help" target="_blank">Help</a></li>
+          <li ng-show="authUser"><a class="dropdown-menu__link" href="/stream?q=user:{{account.username}}"
                                      target="_blank">My Annotations</a></li>
-          <li ng-show="authUser"><a href="" ng-click="onLogout()">Sign out</a></li>
+          <li ng-show="authUser"><a class="dropdown-menu__link" href="" ng-click="onLogout()">Sign out</a></li>
         </ul>
       </div>
     </div>
@@ -66,12 +66,18 @@
           <i class="h-icon-account"></i><i class="h-icon-arrow-drop-down"></i>
         </a>
         <ul class="dropdown-menu pull-right" role="menu">
-          <li ng-show="authUser"><a href="" ng-click="accountDialog.visible = true">Account</a></li>
-          <li><a href="mailto:support@hypothes.is">Feedback</a></li>
-          <li><a href="/docs/help" target="_blank">Help</a></li>
           <li ng-show="authUser"><a href="/stream?q=user:{{account.username}}"
-                                     target="_blank">My Annotations</a></li>
-          <li ng-show="authUser"><a href="" ng-click="onLogout()">Sign out</a></li>
+                                    class="dropdown-menu__link"
+                                    title="View all your annotations"
+                                     target="_blank">{{account.username}}</a></li>
+          <li ng-show="authUser"><a href=""
+                                    class="dropdown-menu__link"
+                                    ng-click="accountDialog.visible = true"><!-- nospace
+            !-->Account settings</a></li>
+          <li><a class="dropdown-menu__link" href="/docs/help" target="_blank">Help</a></li>
+          <li><a class="dropdown-menu__link" href="mailto:support@hypothes.is">Feedback</a></li>
+          <li ng-show="authUser"><a class="dropdown-menu__link dropdown-menu__link--subtle"
+                                    href="" ng-click="onLogout()">Sign out</a></li>
         </ul>
       </div>
     </div>
