Fix drunken animation whilst manually resizing the sidebar
53bd01169cd8eb00748f953a6b2488f09637b32c incorrectly
changed the '.annotator-no-transition' selector which disables
the animated width transitions on the sidebar during
manual resizes to '.annotator-frame .annotator-no-transition' which meant
that it did not take effect.

T-90

--- a/h/static/styles/annotator/inject.scss
+++ b/h/static/styles/annotator/inject.scss
@@ -134,17 +134,6 @@ $base-font-size: 14px;
     font-family: 'h';
   }
 
-  .annotator-no-transition {
-    @include transition(none !important);
-  }
-
-  .annotator-placeholder {
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    z-index: -1;
-  }
-
   // the vertical toolbar at the left-edge of the sidebar
   // which provides controls for toggling the sidebar,
   // toggling highlights etc.
@@ -207,6 +196,19 @@ $base-font-size: 14px;
     // to match the height of the top bar
     height: 40px;
   }
+}
+
+.annotator-placeholder {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  z-index: -1;
+}
+
+// this disables the width transition for the sidebar when
+// it is manually resized by dragging
+.annotator-no-transition {
+  @include transition(none !important);
 }
 
 /*
