Add padding between search icon and input field
The input field has no padding by default
so that it does not take up space when collapsed.

When expanded we need some padding between the icon
and the input.

--- a/h/static/styles/simple-search.scss
+++ b/h/static/styles/simple-search.scss
@@ -30,7 +30,7 @@
     padding: 0;
 
     max-width: 0px;
-    transition: max-width .3s ease-out;
+    transition: max-width .3s ease-out, padding-left .3s ease-out;
 
     &:disabled {
       background: none;
@@ -39,6 +39,7 @@
 
     &:focus,&.is-expanded {
       max-width: $expanded-max-width;
+      padding-left: 6px;
     }
   }
 }
