UI polish for top bar items
 * Add a couple of missing titles

 * Fix hover state for share icon when groups is disabled

T-90

--- a/h/templates/client/group_list.html
+++ b/h/templates/client/group_list.html
@@ -4,7 +4,8 @@
         data-toggle="dropdown"
         role="button"
         ng-switch on="groups.focused().public"
-        ng-click="toggleShareLink(undefined)">
+        ng-click="toggleShareLink(undefined)"
+        title="Change the selected group">
     <i class="group-list-label__icon h-icon-public" ng-switch-when="true"></i><!-- nospace
     !--><i class="group-list-label__icon h-icon-group" ng-switch-default></i>
     <span class="group-list-label__label">{{groups.focused().name}}</span><!-- nospace
