Fix markdown editor under Angular 1.4
The read-only state was not being passed correctly from
the annotation viewer to the markdown editor, possibly
due to the use of the 'ng-readonly' which in turn
set the 'readonly' attribute that the 'markdown'
directive tried to read.

This converts the markdown editor to use the
preferred style of an element directive plus
a 'read-only' attr.

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -80,9 +80,9 @@
   <!-- Body -->
   <section name="text" class="annotation-body">
     <excerpt enabled="feature('truncate_annotations') && !vm.editing">
-      <div ng-model="vm.annotation.text"
-           ng-readonly="!vm.editing"
-           markdown>
+      <markdown ng-model="vm.annotation.text"
+           read-only="!vm.editing"
+           ></markdown>
     </excerpt>
   </section>
   <!-- / Body -->
