--- a/h/templates/client/markdown.html
+++ b/h/templates/client/markdown.html
@@ -1,4 +1,4 @@
-<div ng-hide="readonly" class="markdown-tools" ng-class="preview && 'disable'">
+<div ng-hide="readOnly" class="markdown-tools" ng-class="preview && 'disable'">
   <span class="markdown-preview-toggle">
     <a class="markdown-tools-badge h-icon-markdown" href="https://help.github.com/articles/markdown-basics" title="Parsed as Markdown" target="_blank"></a>
     <a href="" class="markdown-tools-toggle" ng-click="togglePreview()" ng-show="!preview">Preview</a>
@@ -14,7 +14,7 @@
   <i class="h-icon-format-list-bulleted markdown-tools-button" ng-click="insertList()" title="Insert list"></i>
 </div>
 <textarea class="form-input form-textarea js-markdown-input"
-          ng-hide="readonly || preview"
+          ng-hide="readOnly || preview"
           ng-click="$event.stopPropagation()"
           ng-required="required"></textarea>
-<div class="styled-text js-markdown-preview" ng-class="preview && 'markdown-preview'" ng-dblclick="togglePreview()" ng-bind-html="rendered" ng-show="readonly || preview"></div>
+<div class="styled-text js-markdown-preview" ng-class="preview && 'markdown-preview'" ng-dblclick="togglePreview()" ng-bind-html="rendered" ng-show="readOnly || preview"></div>
