Add profile and notifications forms
Add server-rendered profile update and notifications settings forms.
Unlike the previous changes I've made to form-handling, these are not
straightforward translations of the forms that existed in the sidebar,
for a couple of different reasons:

- The profile update form no longer has a delete account button. The
  delete account functionality doesn't really do anything: it sets a
  random password and logs the user out. We haven't removed any of their
  personally identifying information, and we can't even tell by looking
  at the database who has attempted to delete their account. We've
  agreed to remove this button until such time as we can implement the
  feature properly.

  In its place is a paragraph inviting users who wish to delete their
  accounts to email support.

- The wording and layout of the notifications update form has been
  tweaked to read more clearly.

--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -13,7 +13,7 @@
   position: relative;
   text-transform: uppercase;
   font-weight: bold;
-  margin-top: 0;
+  margin-top: 1.5em;
   margin-bottom: 1.5em;
 
   span {
@@ -51,6 +51,10 @@
   cursor: pointer;
   font-weight: bold;
   margin-bottom: .4em;
+}
+
+.form-label--light {
+  font-weight: normal;
 }
 
 .form-hint {
