--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -100,12 +100,11 @@
 {% block ga_pageview %}{% endblock %}
 
 {% block scripts %}
-  <script>
-    window.hypothesis = window.hypothesis || {};
-    window.hypothesis.settings = {
-      apiUrl: "{{ request.route_url('api') }}",
-      websocketUrl: "{{ request.route_url('ws') | websocketize }}",
-    };
+  <script id="hypothesis-settings" type="application/json">
+    {
+      "apiUrl": "{{ request.route_url('api') }}",
+      "websocketUrl": "{{ request.route_url('ws') | websocketize }}"
+    }
   </script>
   {% assets "app_js" %}
     <script src="{{ ASSET_URL }}"></script>
