Extract sort dropdown into its own component
Extract the sort dropdown into a reusable component
and add tests.

T-91

--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -90,6 +90,9 @@
   <script type="text/ng-template" id="search_status_bar.html">
     {{ include_raw("h:templates/client/search_status_bar.html") }}
   </script>
+  <script type="text/ng-template" id="sort_dropdown.html">
+    {{ include_raw("h:templates/client/sort_dropdown.html") }}
+  </script>
   <script type="text/ng-template" id="top_bar.html">
     {{ include_raw("h:templates/client/top_bar.html") }}
   </script>
