--- a/h/templates/admin/nipsa.html.jinja2
+++ b/h/templates/admin/nipsa.html.jinja2
@@ -31,16 +31,16 @@
       <h3 class="panel-title">Unflag a user</h3>
     </div>
     <div class="panel-body">
-      {% if userids %}
+      {% if usernames %}
       <form 
         method="POST" 
         action="{{ request.route_url('admin_nipsa') }}">
         <ul>
-          {% for userid in userids %}
+          {% for username in usernames %}
             <li>
-              {{ userid }}
+              {{ username }}
               <button type="submit" class="btn btn-link btn-sm"
-                      name="remove" value="{{ userid }}">
+                      name="remove" value="{{ usernames }}">
                 Remove
               </button>
             </li>
