--- a/h/templates/client/sort_dropdown.html
+++ b/h/templates/client/sort_dropdown.html
@@ -12,7 +12,7 @@
     ng-if="showAsIcon"
     dropdown-toggle
     title="Sort by {{sortBy}}">
-    <i class="h-icon-search"></i>
+    <i class="h-icon-sort"></i>
   </button>
   <ul class="dropdown-menu pull-right" role="menu">
     <li ng-repeat="sortOption in sortOptions"
