--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -328,6 +328,27 @@ html {
   visibility: visible;
 }
 
+.dropdown-menu__row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.dropdown-menu-radio {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin-left: 8px;
+  margin-right: 8px;
+
+  border: 1px solid $color-silver;
+}
+
+.dropdown-menu-radio.is-selected {
+  border: 4px solid $color-dove-gray;
+}
+
 .masthead {
   margin-bottom: 1em;
 
