--- a/h/templates/client/sort_dropdown.html
+++ b/h/templates/client/sort_dropdown.html
@@ -15,9 +15,11 @@
     <i class="h-icon-sort"></i>
   </button>
   <ul class="dropdown-menu pull-right" role="menu">
-    <li ng-repeat="sortOption in sortOptions"
+    <li class="dropdown-menu__row"
+        ng-repeat="sortOption in sortOptions"
         ng-click="onChangeSortBy({sortBy: sortOption})"
-        ><span ng-class="sortOption === sortBy ? 'dropdown-menu__radio-btn--selected' : ''"
+        ><span class="dropdown-menu-radio"
+               ng-class="{'is-selected' : sortOption === sortBy}"
         ></span><a class="dropdown-menu__link" href="">{{sortOption}}</a></li>
   </ul>
 </span>
