--- a/h/templates/client/top_bar.html
+++ b/h/templates/client/top_bar.html
@@ -30,12 +30,22 @@
           {{account.username}}<span class="provider" ng-show="authUser">/{{account.provider}}</span><i class="h-icon-arrow-drop-down"></i>
         </span>
         <ul class="dropdown-menu pull-right" role="menu">
-          <li ng-show="authUser"><a class="dropdown-menu__link" href="/profile" target="_blank">Account</a></li>
-          <li><a class="dropdown-menu__link" href="mailto:support@hypothes.is">Feedback</a></li>
-          <li><a class="dropdown-menu__link" href="/docs/help" target="_blank">Help</a></li>
-          <li ng-show="authUser"><a class="dropdown-menu__link" href="/stream?q=user:{{account.username}}"
-                                     target="_blank">My Annotations</a></li>
-          <li ng-show="authUser"><a class="dropdown-menu__link" href="" ng-click="onLogout()">Sign out</a></li>
+          <li class="dropdown-menu__row" ng-show="authUser">
+            <a class="dropdown-menu__link" href="/profile" target="_blank">Account</a>
+          </li>
+          <li class="dropdown-menu__row" >
+            <a class="dropdown-menu__link" href="mailto:support@hypothes.is">Feedback</a>
+          </li>
+          <li class="dropdown-menu__row" >
+            <a class="dropdown-menu__link" href="/docs/help" target="_blank">Help</a>
+          </li>
+          <li class="dropdown-menu__row" ng-show="authUser">
+            <a class="dropdown-menu__link" href="/stream?q=user:{{account.username}}"
+               target="_blank">My Annotations</a>
+          </li>
+          <li class="dropdown-menu__row" ng-show="authUser">
+            <a class="dropdown-menu__link" href="" ng-click="onLogout()">Sign out</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -79,18 +89,25 @@
           !--><i class="h-icon-arrow-drop-down top-bar__dropdown-arrow"></i>
         </a>
         <ul class="dropdown-menu pull-right" role="menu">
-          <li ng-show="authUser"><a href="/stream?q=user:{{account.username}}"
-                                    class="dropdown-menu__link"
-                                    title="View all your annotations"
-                                     target="_blank">{{account.username}}</a></li>
-          <li ng-show="authUser"><a href="/profile"
-                                    target="_blank"
-                                    class="dropdown-menu__link"><!-- nospace
-            !-->Account settings</a></li>
-          <li><a class="dropdown-menu__link" href="/docs/help" target="_blank">Help</a></li>
-          <li><a class="dropdown-menu__link" href="mailto:support@hypothes.is">Feedback</a></li>
-          <li ng-show="authUser"><a class="dropdown-menu__link dropdown-menu__link--subtle"
-                                    href="" ng-click="onLogout()">Sign out</a></li>
+          <li class="dropdown-menu__row" ng-show="authUser">
+            <a href="/stream?q=user:{{account.username}}"
+               class="dropdown-menu__link"
+               title="View all your annotations"
+               target="_blank">{{account.username}}</a>
+          </li>
+          <li class="dropdown-menu__row" ng-show="authUser">
+            <a class="dropdown-menu__link" href="/profile" target="_blank">Account settings</a>
+          </li>
+          <li class="dropdown-menu__row">
+            <a class="dropdown-menu__link" href="/docs/help" target="_blank">Help</a>
+          </li>
+          <li class="dropdown-menu__row">
+            <a class="dropdown-menu__link" href="mailto:support@hypothes.is">Feedback</a>
+          </li>
+          <li class="dropdown-menu__row" ng-show="authUser">
+            <a class="dropdown-menu__link dropdown-menu__link--subtle"
+               href="" ng-click="onLogout()">Sign out</a>
+          </li>
         </ul>
       </div>
     </div>
