Use BEM naming consistently for dropdown menu elements
Dropdown menus were using BEM element naming in some
places and tag name selectors in others.

This updates the styling to use BEM element naming
consistently.

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -106,6 +106,7 @@ $group-list-width: 270px;
   .group-item {
     display: flex;
     flex-direction: row;
+    flex-grow: 1;
 
     padding: 10px;
     cursor: pointer;
