Improve display of dropdown menu for non-groups users
Align the dropdown menu's top arrow with the
bottom arrow of the menu.

As the styling of the dropdown was adjusted for
its new home in the top bar, it became wider and the
previous alignment of the menu resulted in it disappearing
off the left edge of the sidebar.

T-91

--- a/h/templates/client/sort_dropdown.html
+++ b/h/templates/client/sort_dropdown.html
@@ -14,7 +14,9 @@
     title="Sort by {{sortBy}}">
     <i class="h-icon-sort"></i>
   </button>
-  <ul class="dropdown-menu pull-right" role="menu">
+  <div class="dropdown-menu__top-arrow"></div>
+  <ul class="dropdown-menu"
+      ng-class="showAsIcon ? 'pull-right' : 'pull-none'" role="menu">
     <li class="dropdown-menu__row"
         ng-repeat="sortOption in sortOptions"
         ng-click="onChangeSortBy({sortBy: sortOption})"
