Adjust the font size of all top bar text
Use 14px for all top bar menu item text
for consistency.

T-91

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -122,6 +122,7 @@ $group-list-width: 270px;
 
     &.selected {
       .group-name-link {
+        font-size: $body2-font-size;
         font-weight: 600;
       }
     }
@@ -175,6 +176,7 @@ $group-list-width: 270px;
 // the label showing the currently selected group which opens
 // the drop-down list when clicked
 .group-list-label__label {
+  font-size: $body2-font-size;
   font-weight:bold;
 }
 
