--- a/h/static/styles/variables.scss
+++ b/h/static/styles/variables.scss
@@ -18,6 +18,7 @@ $color-gray: #818181;
 $color-silver-chalice: #a6a6a6;
 $color-silver: #bbb;
 $color-alto: #dedede;
+$color-mercury: #e2e2e2;
 $color-seashell: #f1f1f1;
 $color-wild-sand: #f5f5f5;
 
