--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -14,6 +14,7 @@
 <article class="annotation thread-message {{vm.collapsed && 'collapsed'}}"
          name="annotation"
          annotation="vm.container.message"
+         is-last-reply="$last"
          is-sidebar="{{isSidebar}}"
          annotation-show-reply-count="{{vm.shouldShowNumReplies()}}"
          annotation-reply-count="{{vm.numReplies()}}"
