--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -22,7 +22,7 @@
     </sort-dropdown>
   </li>
   <li id="{{vm.id}}"
-      class="paper thread"
+      class="annotation-card thread"
       ng-class="{'js-hover': hasFocus(child.message)}"
       deep-count="count"
       thread="child" thread-filter
